# cmag

./: .clang-format  .gitignore  .gitmodules  CMakeGlobalSetup.cmake  CMakeLists.txt  CMakeUtils.cmake  LICENSE  README.md  test.sh
.github/scripts/: format_linux.sh
.github/workflows/: cmake-multi-platform.yml  format.yml  verification.yml
cmag/: CMakeLists.txt  main.cpp
cmag_browser/: CMakeLists.txt  browser_state.cpp  browser_state.h  cmag_browser_theme.h  gl_extensions.cpp  gl_extensions.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  math_utils.h  tab_change.cpp  tab_change.h  target_graph.cpp  target_graph.h  target_graph_widget.cpp  target_graph_widget.h  target_properties_widget.cpp  target_properties_widget.h  target_selection.h
cmag_browser/browser_state/: browser_state.cpp  browser_state.h  cmag_browser_theme.h  config_selector.cpp  config_selector.h  project_saver.cpp  project_saver.h  tab_change.cpp  tab_change.h  target_selection.cpp  target_selection.h
cmag_browser/components/: config_selector.cpp  config_selector.h  list_dir_tab.cpp  list_dir_tab.h  summary_tab.cpp  summary_tab.h  target_folder_tab.cpp  target_folder_tab.h  target_graph_tab.cpp  target_graph_tab.h
cmag_browser/components/target_graph/: shapes.cpp  shapes.h  target_graph.cpp  target_graph.h  text_renderer.h
cmag_browser/components/target_graph/shaders/: fragment_shader.glsl  vertex_shader.glsl
cmag_browser/tabs/: CMakeLists.txt  list_dir_tab.cpp  list_dir_tab.h  summary_tab.cpp  summary_tab.h  target_folder_tab.cpp  target_folder_tab.h  target_graph_tab.cpp  target_graph_tab.h
cmag_browser/target_graph/: coordinate_space.h  shapes.h  target_graph.cpp  target_graph.h  text_renderer.cpp  text_renderer.h
cmag_browser/target_graph/shaders/: fragment_shader.glsl
cmag_browser/ui/: config_selector.cpp  config_selector.h  list_dir_tab.cpp  list_dir_tab.h  listfile_tab.h  summary_tab.cpp  summary_tab.h  target_graph.cpp  target_graph.h  target_graph_tab.cpp  target_graph_tab.h
cmag_browser/ui/target_graph/: coordinate_space.h  shapes.cpp  shapes.h  target_graph.cpp  target_graph.h  text_renderer.cpp  text_renderer.h
cmag_browser/ui_utils/: cmag_browser_theme.cpp  cmag_browser_theme.h  imgui_font_glyph_inserter.cpp  imgui_font_glyph_inserter.h  raii_imgui_style.cpp  raii_imgui_style.h  section.h  tooltip.cpp  tooltip.h
cmag_browser/util/: gl_extensions.cpp  gl_extensions.h  gl_helpers.cpp  gl_helpers.h  graph_layout.cpp  graph_layout.h  imgui_utils.cpp  imgui_utils.h  math_utils.cpp  math_utils.h  movable_primitive.h
cmag_core/: CMakeLists.txt
cmag_core/browser/: browser_argument_parser.cpp  browser_argument_parser.h
cmag_core/core/: argument_parser.cpp  argument_parser.h  cmag.cpp  cmag.h  cmag_project.cpp  cmag_project.h  cmake_generator.cpp  cmake_generator.h  version.h
cmag_core/dumper/: CMakeLists.txt  cmag_dumper.cpp  cmag_dumper.h  dumper_argument_parser.cpp  dumper_argument_parser.h
cmag_core/parse/: cmag_json_parser.cpp  cmag_json_parser.h  cmag_json_writer.cpp  cmag_json_writer.h  enum_serialization.h  xdot_parser.cpp
cmag_core/shim/: cmake_lists_shimmer.cpp  cmake_lists_shimmer.h  postamble.cmake
cmag_core/utils/: enum_utils.h  error.h  file_utils.h  filesystem.h  math_utils.cpp  math_utils.h  os.h  string_utils.h  subprocess.h
cmag_core/utils/linux/: error.h  filesystem.cpp  subprocess.cpp
cmag_core/utils/windows/: filesystem.cpp  subprocess.cpp
cmag_exe/: CMakeLists.txt  main.cpp
cmag_lib/: CMakeLists.txt  cmag.cpp  cmag.h  xdot_parser.cpp  xdot_parser.h
cmag_lib/cmake_generation/: ArgumentParser.cpp  ArgumentParser.h  CMakeListsShimmer.cpp  CMakeListsShimmer.h  argument_parser.cpp  argument_parser.h  cmake_lists_shimmer.cpp  cmake_lists_shimmer.h  generate.h  postamble.h
cmag_lib/core/: CMakeLists.txt  argument_parser.cpp  argument_parser.h  cmag.cpp  cmag.h  cmag_json_parser.cpp  cmag_json_parser.h  cmag_json_writer.cpp  cmag_json_writer.h  cmag_project.cpp  cmag_project.h  cmag_project_parser.cpp  cmag_project_parser.h  generate_project.h
cmag_lib/json/: cmag_json_parser.cpp  cmag_json_parser.h  cmag_json_writer.cpp  cmag_json_writer.h
cmag_lib/parse/: cmag_json_parser.cpp  cmag_json_parser.h  cmag_json_writer.cpp  cmag_json_writer.h  enum_serialization.h  xdot_parser.cpp  xdot_parser.h
cmag_lib/shim/: cmake_lists_shimmer.cpp  cmake_lists_shimmer.h  postamble.cmake  postamble.h
cmag_lib/utils/: error.h  file_utils.h  filesystem.h  string_utils.h  subprocess.h
cmag_lib/utils/linux/: error.h  filesystem.cpp  subprocess.cpp
cmag_lib/utils/windows/: filesystem.cpp  subprocess.cpp
deploy/: .gitignore  README.md  Vagrantfile  deploy.py  deploy_utils.py
deploy/assets/: description.md
deploy/guest_scripts/: PKGBUILD  archlinux_build.sh  (+10 more)
doc/: cmag_browser_cli.txt  cmag_cli.txt  versioning.md
test/: CMakeLists.txt
test/acceptance/all_types/: CMakeLists.txt
test/os/: CMakeLists.txt  cmag_tests.cpp  cmake_generator_db.cpp  cmake_generator_db.h  cmake_lists_shimmer_tests.cpp  dumper_tests.cpp  file_utils_tests.cpp  fixtures.h  main.cpp
test/os/utils/: CMakeLists.txt  file_operations.h  test_workspace.h
test/projects/aliases/: CMakeLists.txt
test/projects/all_types/: CMakeLists.txt
test/projects/genex/: CMakeLists.txt
test/projects/simple/: CMakeLists.txt
test/projects/target_link_libraries_in_different_dir/subdir/: CMakeLists.txt
test/projects/with_subdirs/: CMakeLists.txt
test/projects/with_subdirs/a/: CMakeLists.txt
test/projects/with_subdirs/b/: CMakeLists.txt
test/projects/with_subdirs/b/c/: CMakeLists.txt
test/projects/with_subdirs/b/d/: CMakeLists.txt
test/projects/with_subdirs/b/e/: CMakeLists.txt
test/projects/with_subdirs/subdir/: CMakeLists.txt
test/projects/with_subdirs/subdir2/: CMakeLists.txt
test/unit/: CMakeLists.txt  argument_parser_test.cpp  browser_argument_parser_tests.cpp  cmag_json_parser_test.cpp  cmag_json_writer_parser_test.cpp  cmag_project_parser_test.cpp  cmag_project_test.cpp  dumper_argument_parser_test.cpp  string_utils_test.cpp  version_test.cpp
(+19 files in other folders)
